--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>The Beer List</title>
+    <link href="./styles/style.css" rel="stylesheet">
 <body>
     <div id="root"></div>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
